Kubernitization of the project.

--- a/country_client/pom.xml
+++ b/country_client/pom.xml
@@ -9,13 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>country_client</artifactId>
+	<artifactId>country-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>country_client</name>
+	<name>country-client</name>
 	<description>Country Client</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.2</spring-cloud.version>
+		<jib-maven-plugin.version>3.1.4</jib-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -43,12 +44,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>country_server</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -74,6 +69,19 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<to>
+						<image>${docker.image}</image>
+					</to>
+					<container>
+						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+					</container>
 				</configuration>
 			</plugin>
 		</plugins>
