--- a/country_client/src/main/resources/application.properties
+++ b/country_client/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=9090
-eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
+eureka.client.serviceUrl.defaultZone=http://cluster-ip-eureka-server:8888/eureka
 spring.application.name=Country-Client
+eureka.instance.preferIpAddress=true
