--- a/country_server/src/main/resources/application.properties
+++ b/country_server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=Country-Service
-eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
+eureka.client.serviceUrl.defaultZone=http://cluster-ip-eureka-server:8888/eureka
 server.port = 9000
+eureka.instance.preferIpAddress=true
