--- a/eureka_server/src/main/resources/application.properties
+++ b/eureka_server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8888
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+eureka.instance.preferIpAddress=true
